# IPR_labs

./: README.md  docker-compose.yml  pyproject.toml
Hackathon_Document_parsing/: README.md
lab3-docker-compose/: .Makefile.swp  .env  .env.db  .env.example  Makefile  Readme.md  docker-compose.yml
lab3-docker-compose/frontend/: Dokerfile  README.md  build.gradle.kts  index.html  nginx.conf  settings.gradle.kts
lab3-docker-compose/frontend/buildSrc/: build.gradle.kts
lab3-docker-compose/frontend/composeApp/: build.gradle.kts
lab3-docker-compose/frontend/docker-mock/: Dockerfile.txt  db.json
lab3-docker-compose/frontend/gradle/: libs.versions.toml
lab3-docker-compose/frontend/iosApp/Configuration/: Config.xcconfig
lab3-docker-compose/frontend/iosApp/iosApp/: ContentView.swift  Info.plist  iOSApp.swift
lab3-docker-compose/frontend/iosApp/iosApp.xcodeproj/: project.pbxproj
lab3-docker-compose/frontend/shared/core/: build.gradle.kts
lab3-docker-compose/frontend/shared/di/: build.gradle.kts
lab3-docker-compose/frontend/shared/root/: build.gradle.kts
lab3-docker-compose/frontend/shared/utils-compose/: build.gradle.kts  (+1 more)
lab4_cicd/: Dockerfile  Dockerfile.test  README.md  python-tests.yml  requirements.txt
lab4_cicd/.github/workflows/: ci-cd.yml
lab4_cicd/core/: simulations.py
lab4_cicd/tests/: test_helpers.py  test_library.py
lab4_cicd/utils/: helpers.py
scripts/: entrypoint.sh
src/: main.py
src/core/: library.py
src/models/: book.py  collections.py
tests/: test_book.py  test_collections.py  test_simulations.py
(+380 files in other folders)
